fix(helpexpander): align tekst og ikoner på toppen når tekst går over flere linjer

--- a/npm/designsystem/src/components/HelpExpanderStandalone/styles.module.scss
+++ b/npm/designsystem/src/components/HelpExpanderStandalone/styles.module.scss
@@ -2,4 +2,9 @@
   // Plasserer HelpTriggerStandalone over HelpExpanderStandalone for at focus-outline skal vises riktig
   position: relative;
   z-index: 1;
+
+  &__inner-container {
+    display: flex;
+    align-items: flex-start;
+  }
 }
